--- a/force-app/main/default/layouts/Clinical_Trial_Profile__c-Clinical Trial Profile Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Clinical_Trial_Profile__c-Clinical Trial Profile Layout.layout-meta.xml
@@ -27,6 +27,10 @@
                 <behavior>Edit</behavior>
                 <field>Shareback_Settings_on_StudySites__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Patient_Portal_Enabled__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -175,10 +179,6 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Include_in_RP_trial_search__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Include_in_patient_trial_search__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
@@ -587,7 +587,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h1h000000YyAw</masterLabel>
+        <masterLabel>00h6E000000gRy0</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
