Referral Source fix

--- a/force-app/main/default/layouts/Integration_Patient_Referral__c-Integration Patient Referral Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Integration_Patient_Referral__c-Integration Patient Referral Layout.layout-meta.xml
@@ -138,6 +138,14 @@
                 <behavior>Edit</behavior>
                 <field>Middle_Initial__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Success__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Error_Message__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
