--- a/force-app/main/default/aura/StudySiteCardForPI/StudySiteCardForPI.css
+++ b/force-app/main/default/aura/StudySiteCardForPI/StudySiteCardForPI.css
@@ -1,21 +1,34 @@
 /**
  * Created by Nikita Abrazhevitch on 21-Aug-19.
  */
-
-.THIS .manage-location-details {
+.THIS .card-header {
     height: 24px;
+    margin: 24px 0 0 auto;
+    padding: 30px 30px 30px 30px;
+    background-color: #F2F2F2;
+    border-top: 1px solid #F2F2F2;
+    border-left: 1px solid #F2F2F2;
+    border-right: 1px solid #F2F2F2;
+}
+.THIS .pi-name {
+    display: inline-block;
+    width: 50%;
+    color: #000000;
+    font-family: "Proxima Nova";
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 24px;
+    text-align: left;
+}
+.THIS .manage-location-details {
+    display: inline-block;
+    width: 50%;
     color: #297DFD;
     font-family: "Proxima Nova";
     font-size: 14px;
     font-weight: 500;
     line-height: 24px;
     text-align: right;
-    margin: 24px 0 0 auto;
-    padding: 6px 10px 0 0;
-    background-color: #F2F2F2;
-    border-top: 1px solid #F2F2F2;
-    border-left: 1px solid #F2F2F2;
-    border-right: 1px solid #F2F2F2;
 }
 
 .THIS .manage-location-details span {
