--- a/force-app/main/ui-community-template/aura/ProfileMenu/ProfileMenu.cmp
+++ b/force-app/main/ui-community-template/aura/ProfileMenu/ProfileMenu.cmp
@@ -23,12 +23,12 @@
         </aura:set>
         <!-- menu items: -->
         <aura:if isTrue="{!or(v.userMode == 'PI', v.userMode == 'HCP')}">
-            <c:uiMenuItem label="{!$Label.c.PG_PST_L_My_Team}" onclick="{!c.doSelectItem}" itemValue="settings?tab=my-team" />
+            <c:uiMenuItem label="{!$Label.c.PG_PST_L_My_Team}" onclick="{!c.doSelectItem}" itemValue="my-team" />
         </aura:if>
         <aura:if isTrue="{!and(v.userMode == 'Participant', !v.isDelegate)}">
-            <c:uiMenuItem label="{!$Label.c.PG_PST_L_Delegates}" onclick="{!c.doSelectItem}" itemValue="settings?tab=delegates" />
+            <c:uiMenuItem label="{!$Label.c.PG_PST_L_Delegates}" onclick="{!c.doSelectItem}" itemValue="my-team" />
         </aura:if>
-        <c:uiMenuItem label="{!$Label.c.Profile_Menu_Account_Settings}" onclick="{!c.doSelectItem}" itemValue="settings?tab=account-settings" />
+        <c:uiMenuItem label="{!$Label.c.Profile_Menu_Account_Settings}" onclick="{!c.doSelectItem}" itemValue="account-settings" />
         <c:uiMenuItem label="{!$Label.c.Profile_Menu_Log_Out}" onclick="{!c.doSelectItem}" itemValue="logout" />
     </c:uiHeaderMenu>
 
