--- a/force-app/main/default/aura/RRLookup/RRLookup.cmp
+++ b/force-app/main/default/aura/RRLookup/RRLookup.cmp
@@ -16,8 +16,8 @@
     <aura:attribute name="value" type="String"/>
     <aura:attribute name="onchange" type="Aura.Action"/>
     <!--body-->
-    <lightning:recordEditForm objectApiName="{!v.objectName}" >
-        <lightning:inputField fieldName="{!v.lookupName}" onchange="{!c.onSelect}" aura:id="field" value="{!v.selectedLookup}"/>
+    <lightning:recordEditForm objectApiName="{!v.objectName}"  class="slds-large-size--1-of-1">
+        <lightning:inputField fieldName="{!v.lookupName}" onchange="{!c.onSelect}" aura:id="field" value="{!v.selectedLookup}" class="slds-combobox__input"/>
     </lightning:recordEditForm>
 
     <force:recordData aura:id="recordData"
@@ -30,20 +30,20 @@
     <!-- Multi-selection pills -->
     <aura:if isTrue="{!!empty(v.selectedRecords)}">
         <div class="pill-container">
-            <div id="{# globalId + '_selection' }" role="listbox" aria-orientation="horizontal">
-                <ul class="slds-listbox slds-listbox_inline slds-p-top_xxx-small" role="group" aria-label="Selected Options:">
+            <div id="{# globalId + '_selection' }" role="listbox" aria-orientation="horizontal" class="slds-medium-show--inline-block">
+                <ul class="slds-listbox slds-listbox_inline slds-slide-from-top-to-bottom slds-large-size--1-of-1" role="group" aria-label="Selected Options:">
                     <aura:iteration items="{!v.selectedRecords}" var="item">
-                        <li role="presentation" class="slds-listbox__item">
-                            <lightning:pill label="{!item.Name}" onremove="{!c.onRemoveSelectedItem}" name="{!item.Id}">
+                        <li role="presentation" class="slds-listbox__item slds-m-bottom--xxx-small">
+                            <lightning:pill label="{!item.Name}" class="slds-m-around--none" onremove="{!c.onRemoveSelectedItem}" name="{!item.Id}">
                                 <aura:set attribute="media">
-                                    <lightning:icon iconName="standard:default" />
+                                    <lightning:icon iconName="custom:custom31" />
                                 </aura:set>
                             </lightning:pill>
                         </li>
                     </aura:iteration>
                 </ul>
             </div>
-            <lightning:buttonIcon iconName="utility:close"  size="x-small" alternativeText="Close" onclick="{!c.onClearSelection}" class="close-btn"/>
+            <lightning:buttonIcon iconName="utility:close" size="x-small" alternativeText="Close" onclick="{!c.onClearSelection}" class="close-btn slds-float--right slds-medium-show--inline-block"/>
         </div>
     </aura:if>
 
