--- a/force-app/main/default/layouts/Integration_Patient_Referral__c-Integration Patient Referral Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Integration_Patient_Referral__c-Integration Patient Referral Layout.layout-meta.xml
@@ -146,6 +146,10 @@
                 <behavior>Edit</behavior>
                 <field>Error_Message__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Participant_Enrollment__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
