--- a/force-app/main/default/layouts/Participant_Enrollment__c-Participant Profile Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Participant_Enrollment__c-Participant Profile Layout.layout-meta.xml
@@ -425,9 +425,7 @@
     </platformActionList>
     <relatedLists>
         <fields>NAME</fields>
-        <fields>NewStatus__c</fields>
-        <fields>Reason__c</fields>
-        <fields>Notes__c</fields>
+        <fields>Status__c</fields>
         <fields>Date__c</fields>
         <relatedList>Participant_Enrollment_Status_History__c.ParticipantEnrollment__c</relatedList>
     </relatedLists>
@@ -444,7 +442,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h1h000000YyBP</masterLabel>
+        <masterLabel>00h1j000000awZe</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
