--- a/force-app/main/default/aura/StudyDocumentContainer/StudyDocumentContainer.cmp
+++ b/force-app/main/default/aura/StudyDocumentContainer/StudyDocumentContainer.cmp
@@ -9,6 +9,7 @@
     <aura:attribute name="resourceWrappers" type="ResourceService.ResourceWrapper[]"/>
     <aura:attribute name="resourcesOnPage" type="ResourceService.ResourceWrapper[]"/>
     <aura:attribute name="errorMessage" type="String" default=""/>
+    <aura:attribute name="modeChanged" type="Boolean" default="false"/>
 
     <!--HANDLERS-->
 
@@ -20,41 +21,87 @@
         <div class="resource-table">
             <div class="resource-title">
                 {!$Label.c.Resource_Tab_Study_Documents}
+                <div dir="rtl">
+                    <div class="slds-form-element">
+                        <label class="slds-checkbox_toggle slds-grid">
+                            <span class="slds-form-element__label slds-m-bottom_none">{!$Label.c.SD_Icon_View}</span>
+                            <input type="checkbox" name="checkbox-toggle-17" value="" aria-describedby="checkbox-toggle-17" checked="{!v.modeChanged}" onclick="{!c.newModeSelected}" />
+                            <span id="checkbox-toggle-17" class="slds-checkbox_faux_container slds-m-right_small" aria-live="assertive">
+                                <span class="slds-checkbox_faux"></span>
+                                <span class="slds-checkbox_on">Enabled</span>
+                                <span class="slds-checkbox_off">Disabled</span>
+                            </span>
+                        </label>
+                    </div>
+                </div>
             </div>
-            <c:RRTable>
-                <tr>
-                    <th class="study-document-icon"></th>
-                    <th class="study-document-title">{!$Label.c.Resources_Study_Document_Table_Col_Title}</th>
-                    <th class="study-document-summary">{!$Label.c.Resources_Study_Document_Table_Col_Summary}</th>
-                    <th class="study-document-version-date">{!$Label.c.Resources_Study_Document_Table_Col_Version_Date}</th>
-                </tr>
+
+            <aura:if isTrue="{!v.modeChanged}">
                 <aura:iteration items="{!v.resourcesOnPage}" var="resourceWrapper">
-                    <tr class="study-document-row-data">
-                        <td class="study-document-icon">
-                            <div class="resource-pointer"
-                                 data-type="{!resourceWrapper.resource.RecordType.DeveloperName}"
-                                 data-id="{!resourceWrapper.resource.Id}" onclick="{!c.navigateToPage}">
-                                <c:RRIcon
-                                        iconName="{!resourceWrapper.resource.document_type__c != v.studyDocumentVideoType ? 'icon-pdf' : 'icon-video-study-document'}"
-                                        class="{!resourceWrapper.resource.document_type__c != v.studyDocumentVideoType ? 'resources-icon-pdf' : 'resources-icon-video'}"/>
-                            </div>
-                        </td>
-                        <td class="study-document-column-data study-document-title-data">
-                            <a data-type="{!resourceWrapper.resource.RecordType.DeveloperName}"
+                    <div class="card"
+                         data-type="{!resourceWrapper.resource.RecordType.DeveloperName}"
+                         data-id="{!resourceWrapper.resource.Id}" onclick="{!c.navigateToPage}">
+                        <a class="card-image" target="_blank">
+                            <img class="contrast-logo" src="{!$Resource.PH_logo + '/iqvia.png'}"/>
+                        </a>
+                        <a class="card-description" target="_blank">
+                            <c:RRIcon
+                                    iconName="{!resourceWrapper.resource.document_type__c != v.studyDocumentVideoType ? 'icon-pdf' : 'icon-video-study-document'}"
+                                    class="{!resourceWrapper.resource.document_type__c != v.studyDocumentVideoType ? 'resources-icon-pdf' : 'resources-icon-video'}"/>
+                            <a class="study-document-title-data"
+                               style="margin-left: 10px;" data-type="{!resourceWrapper.resource.RecordType.DeveloperName}"
                                data-id="{!resourceWrapper.resource.Id}"
                                onclick="{!c.navigateToPage}">
                                 {!resourceWrapper.resource.Title__c}
                             </a>
-                        </td>
-                        <td class="study-document-summary study-document-column-data">
-                            {!resourceWrapper.resource.Description__c}
-                        </td>
-                        <td class="study-document-version-date study-document-column-data">
-                            <ui:outputDate value="{!resourceWrapper.resource.Version_Date__c}" format="DD-MMM-YYYY"/>
-                        </td>
-                    </tr>
+                        </a>
+                    </div>
                 </aura:iteration>
-            </c:RRTable>
+                <footer class="resource-footer" style="{!lessthan(v.resourceWrappers.length, 9) ? 'display: none;' : ''}">
+                    <c:rrPagination allObjects="{!v.resourceWrappers}" currentObjects="{!v.resourcesOnPage}"
+                                    entriesOnPage="9"/>
+                </footer>
+                <aura:if isTrue="{!v.errorMessage}">
+                    <div class="resource-error-message">{!v.errorMessage}</div>
+                </aura:if>
+                <aura:set attribute="else">
+                    <c:RRTable>
+                        <tr>
+                            <th class="study-document-icon"></th>
+                            <th class="study-document-title">{!$Label.c.Resources_Study_Document_Table_Col_Title}</th>
+                            <th class="study-document-summary">{!$Label.c.Resources_Study_Document_Table_Col_Summary}</th>
+                            <th class="study-document-version-date">{!$Label.c.Resources_Study_Document_Table_Col_Version_Date}</th>
+                        </tr>
+                        <aura:iteration items="{!v.resourcesOnPage}" var="resourceWrapper">
+                            <tr class="study-document-row-data">
+                                <td class="study-document-icon">
+                                    <div class="resource-pointer"
+                                         data-type="{!resourceWrapper.resource.RecordType.DeveloperName}"
+                                         data-id="{!resourceWrapper.resource.Id}" onclick="{!c.navigateToPage}">
+                                        <c:RRIcon
+                                                iconName="{!resourceWrapper.resource.document_type__c != v.studyDocumentVideoType ? 'icon-pdf' : 'icon-video-study-document'}"
+                                                class="{!resourceWrapper.resource.document_type__c != v.studyDocumentVideoType ? 'resources-icon-pdf' : 'resources-icon-video'}"/>
+                                    </div>
+                                </td>
+                                <td class="study-document-column-data study-document-title-data">
+                                    <a data-type="{!resourceWrapper.resource.RecordType.DeveloperName}"
+                                       data-id="{!resourceWrapper.resource.Id}"
+                                       onclick="{!c.navigateToPage}">
+                                        {!resourceWrapper.resource.Title__c}
+                                    </a>
+                                </td>
+                                <td class="study-document-summary study-document-column-data">
+                                    {!resourceWrapper.resource.Description__c}
+                                </td>
+                                <td class="study-document-version-date study-document-column-data">
+                                    <ui:outputDate value="{!resourceWrapper.resource.Version_Date__c}" format="DD-MMM-YYYY"/>
+                                </td>
+                            </tr>
+                        </aura:iteration>
+                    </c:RRTable>
+                </aura:set>
+            </aura:if>
+
             <footer class="resource-footer" style="{!lessthan(v.resourceWrappers.length, 11) ? 'display: none;' : ''}">
                 <c:rrPagination allObjects="{!v.resourceWrappers}" currentObjects="{!v.resourcesOnPage}"
                                 entriesOnPage="11"/>
