--- a/force-app/main/default/layouts/Study_Site__c-Study Site Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Study_Site__c-Study Site Layout.layout-meta.xml
@@ -36,6 +36,10 @@
                 <behavior>Edit</behavior>
                 <field>Visit_Results_Sharing__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Approved_Lng__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
