--- a/force-app/main/default/layouts/Res_study__c-Res-study Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Res_study__c-Res-study Layout.layout-meta.xml
@@ -43,6 +43,14 @@
                 <behavior>Edit</behavior>
                 <field>Expires_After_Days__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Visible_In_Alumni__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Notify_On_Availability__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
